--- a/src/styles/weather.scss
+++ b/src/styles/weather.scss
@@ -3,9 +3,29 @@
     overflow: hidden;
     color: #fff;
     margin: 5rem;
-    @media(max-width : 761px){
+    @media(max-width : 1159px){
+        width: 75%;
+    }
+
+    @media(max-width : 1080px){
+        width: 85%;
+    }
+
+    @media(max-width : 950px){
+        width: 65%;
+    }
+
+    @media(max-width : 854px){
+        width: 70%;
+    }
+
+    @media(max-width : 816px){
+        width: 80%;
+    }
+
+    @media(max-width : 600px){
         width: 90%;
-        margin: 2rem;
+        margin: 1rem 0;
     }
     .contents{
         display: flex;
@@ -19,6 +39,7 @@
             padding: 1rem;
             background: $single-body;
             border-radius: 10px;
+            height: 100%;
             .searchWeather{
                 @include flex(center, none, none, 1rem);
                 box-shadow: 0px 0px 0px 1px inset $shadow;
@@ -61,16 +82,7 @@
                         span{
                             font-size: 3rem;
                         }
-                        margin-top: 4rem;
-                    }
-                    h5{
-                        padding: 1rem 0;
-                        font-size: 0.9rem;
-                        font-weight: 500;
-                        span{
-                            font-size: 0.6rem;
-                            @include skyBlue;
-                        }
+                        margin-top: 2rem;
                     }
                 }
             }
@@ -204,7 +216,7 @@
                             font-size: 0.8rem;
                         }
                         .fleeDegree{
-                            font-size: 3rem;
+                            font-size: 2.5rem;
                         }
                     }
                     h1{
